--- a/wrr/styles/site-plan-rafting.css
+++ b/wrr/styles/site-plan-rafting.css
@@ -23,7 +23,7 @@ Fonts are separated by a & */
   --paragraph-background-color: #284B63  ;
   --nav-link-color: #FFFFFF;
   --nav-background-color: #3F7478;
-  --nav-hover-link-color: white;
+  --nav-hover-link-color: #FFFFFF;
   --nav-hover-background-color: #284B63;
 }
 
