--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
     text-align: center;
 }
 
-nav {
+nav, footer {
     background-color: steelblue;
     padding: 10px;
   }
@@ -13,12 +13,17 @@ a {
   line-height: 1.5em;
 }
 
+a:hover{
+  background-color: white;
+  color: steelblue;
+}
+
 h1,h2 {
   color: steelblue;
 }
 
 img {
-  width: 800px;
+  width: 25%;
   border: 4px solid steelblue;
 }
 
