--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 body{
-    text-align: center;
+
 }
 
 nav, footer {
+    text-align: center;
     background-color: steelblue;
     padding: 10px;
-  }
+      }
 
 a {
+  font-size: 1em;
   color: white;
   margin: 40px;
   line-height: 1.5em;
@@ -18,16 +20,23 @@ a:hover{
   color: steelblue;
 }
 
+h1 {
+  text-align: center;
+}
+
 h1,h2 {
   color: steelblue;
 }
 
 img {
   width: 25%;
+  display: block;
+  margin: 0 auto;
   border: 4px solid steelblue;
-}
+  }
 
 p {
+  text-align: center;
   padding: 10px;
 }
 
