--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,9 +1,9 @@
 body {
-    background-color: #284B63;
+    background-color: #4f8cb5;
 }
 
 header {
-    background-color: #284B63;
+    background-color: #4f8cb5;
 }
 
 #content {
@@ -13,32 +13,52 @@ header {
 
 nav a {
     text-align: center;
-    color: black;
+    color: white;
     text-decoration: none;
 }
 
 nav a:hover {
-    background-color: #284B63;
-    color: white;
-}
-
-.book, .join {
-    background-color: #284B63;
-    color: white;
-    text-decoration: none;
-}
-
-.book:hover, .join:hover {
-    background-color: white;
+    background-color: #fdd20a;
     color: black;
+}
+
+#hero-img {
+    width: 100%;
 }
 
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
 }
 
+.home-title {
+    color: white;
+}
+
+h4 {
+    color: white;
+}
+
 .button-box {
     text-align: center;
+}
+
+.book, .join {
+    background-color: #4f8cb5;
+    color: white;
+    text-decoration: none;
+}
+
+.book:hover, .join:hover {
+    background-color: #fdd20a;
+    color: black;
+}
+
+.logo {
+    width: 80px;
+}
+
+.icon {
+    width: 80px;
 }
 
 main section {
@@ -47,11 +67,11 @@ main section {
 
 #background {
     height: 725px;
-    background-color: #284B63;
+    background-color: #4f8cb5;
 }
 
 .msg {
-    background-color: #284B63;
+    background-color: #4f8cb5;
 }
 
 .msg h2 {
@@ -63,7 +83,7 @@ main section {
 }
 
 footer {
-    background-color: #284B63;
+    background-color: #4f8cb5;
     font-size: 1.2em;
     color: white;
 }
@@ -74,26 +94,9 @@ footer a {
 }
 
 footer a:hover {
-    color: black;
+    color: #fdd20a;
 }
 
 footer p a:hover {
     text-decoration: underline;
 }
-
-.home-title {
-    color: white;
-}
-
-h4 {
-    color: white;
-}
-
-.logo, .icon {
-    width: 80px;
-}
-
-#hero-img {
-    width: 100%;
-}
-
