--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-
+  margin: 0;
 }
 
 nav, footer {
@@ -9,7 +9,7 @@ nav, footer {
       }
 
 a {
-  font-size: 1em;
+  padding: 10x;
   color: white;
   margin: 40px;
   line-height: 1.5em;
@@ -21,7 +21,8 @@ a:hover{
 }
 
 h1 {
-  text-align: center;
+  /* text-align: center; */
+  margin: 50px 0;
 }
 
 h1,h2 {
@@ -29,9 +30,10 @@ h1,h2 {
 }
 
 img {
-  width: 25%;
+  padding: 25px;
+  width: 80%;
   display: block;
-  margin: 0 auto;
+  margin: 50px auto;
   border: 4px solid steelblue;
   }
 
@@ -43,4 +45,11 @@ p {
 #active {
   background-color: white;
   color: steelblue;
+}
+
+footer p {
+  padding: 25px;
+  color: white;
+  font-size: 20px;
+  margin: 20px auto;
 }
