--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Rock+Salt&display=swap');
+
 body {
     background-color: #4f8cb5;
+    font-family: "Noto Sans", Tahoma, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -12,9 +17,10 @@ header {
 }
 
 nav a {
-    text-align: center;
-    color: white;
     text-decoration: none;
+    color: white;
+    text-align: center;
+    padding: 35px;
 }
 
 nav a:hover {
@@ -32,6 +38,9 @@ nav a:hover {
 
 .home-title {
     color: white;
+    font-family: "Rock Salt", "Brush Script MT", sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
@@ -46,6 +55,10 @@ h4 {
     background-color: #4f8cb5;
     color: white;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover {
@@ -57,12 +70,21 @@ h4 {
     width: 80px;
 }
 
+#logo_link {
+    padding-top: 5px;
+}
+
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 main section {
     text-align: center;
+}
+
+main section img {
+    box-sizing: border-box;
 }
 
 #background {
@@ -70,22 +92,41 @@ main section {
     background-color: #4f8cb5;
 }
 
+h2 {
+    margin: 0;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid black;
+}
+
 .msg {
     background-color: #4f8cb5;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 .msg h2 {
     color: white;
+    font-family: "Rock Salt", "Brush Script MT", sans-serif;
 }
 
 .msg p {
     color: white;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 footer {
     background-color: #4f8cb5;
     font-size: 1.2em;
     color: white;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 footer a {
@@ -99,4 +140,8 @@ footer a:hover {
 
 footer p a:hover {
     text-decoration: underline;
+}
+
+footer .social img {
+    padding-top: 15px;
 }
