--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -52,8 +52,8 @@ h4 {
 }
 
 .book, .join {
-    background-color: #4f8cb5;
-    color: white;
+    background-color: #fdd20a;
+    color: black;
     text-decoration: none;
     font-size: 18px;
     padding: 15px 30px;
@@ -62,7 +62,7 @@ h4 {
 }
 
 .book:hover, .join:hover {
-    background-color: #fdd20a;
+    background-color: white;
     color: black;
 }
 
