--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ a:hover{
 }
 
 h1 {
-  /* text-align: center; */
+  text-align: center;
   margin: 50px 0;
 }
 
@@ -31,7 +31,7 @@ h1,h2 {
 
 img {
   padding: 25px;
-  width: 25%;
+  /* width: 25%; */
   display: block;
   margin: 50px auto;
   border: 4px solid steelblue;
