--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -7,8 +7,12 @@ body {
     padding: 0;
 }
 
+/* ------------------------ Header ------------------------ */
+
 header {
     background-color: #4f8cb5;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 #content {
@@ -16,6 +20,10 @@ header {
     margin: 0 auto;
 }
 
+nav {
+    display: flex;
+    justify-content: space-around;
+}
 nav a {
     text-decoration: none;
     color: white;
@@ -28,12 +36,44 @@ nav a:hover {
     color: black;
 }
 
-#hero-img {
+.logo {
+    width: 80px;
+}
+
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    /* margin-top: -100px; */
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+/* #hero-img {
     width: 100%;
+} */
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    /* margin-top: 100px; */
 }
 
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+}
+
+#hero-msg h4 {
+    color: white;
 }
 
 .home-title {
@@ -41,10 +81,6 @@ nav a:hover {
     font-family: "Rock Salt", "Brush Script MT", sans-serif;
     font-size: 2em;
     margin-top: 10px;
-}
-
-h4 {
-    color: white;
 }
 
 .button-box {
@@ -66,18 +102,18 @@ h4 {
     color: black;
 }
 
-.logo {
-    width: 80px;
-}
-
-#logo_link {
-    padding-top: 5px;
-}
-
 .icon {
     width: 80px;
     padding-top: 10px;
 }
+
+#home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+
+}
+
+/* ------------------------ Main ------------------------ */
 
 main section {
     text-align: center;
@@ -90,6 +126,8 @@ main section img {
 #background {
     height: 725px;
     background-color: #4f8cb5;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 h2 {
@@ -100,14 +138,48 @@ h2 {
     margin: 200px 0;
 }
 
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
 .card-img {
     border: 10px solid white;
+    width: 100%;
+    transition: transform .5;
+    box-shadow: 5px 5px 10px #646a73;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #646a73;
 }
 
 .msg {
     background-color: #4f8cb5;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #646a73;
+
 }
 
 .msg h2 {
@@ -121,12 +193,17 @@ h2 {
     padding-bottom: 15px;
 }
 
+/* ------------------------ Footer ------------------------ */
+
 footer {
     background-color: #4f8cb5;
-    font-size: 1.2em;
+    /* font-size: 1.2em; */
     color: white;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a {
@@ -145,3 +222,52 @@ footer p a:hover {
 footer .social img {
     padding-top: 15px;
 }
+
+
+
+
+
+/* -------------- Media Query (Must Come Last) -------------- */
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+            
