--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Rock+Salt&display=swap');
 
 body {
-    background-color: #4f8cb5;
+    background-color: white;
     font-family: "Noto Sans", Tahoma, sans-serif;
     margin: 0;
     padding: 0;
@@ -49,7 +49,7 @@ nav a:hover {
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    /* margin-top: -100px; */
+    margin-top: -100px;
 }
 
 #hero-box {
@@ -58,14 +58,14 @@ nav a:hover {
     z-index: -1;
 }
 
-/* #hero-img {
+#hero-img {
     width: 100%;
-} */
+}
 
 #hero-msg {
     grid-column: 2/3;
     grid-row: 1/2;
-    /* margin-top: 100px; */
+    margin-top: 100px;
 }
 
 #hero-msg h1, #hero-msg h4 {
@@ -77,7 +77,7 @@ nav a:hover {
 }
 
 .home-title {
-    color: white;
+    color: #fdd20a;
     font-family: "Rock Salt", "Brush Script MT", sans-serif;
     font-size: 2em;
     margin-top: 10px;
@@ -107,13 +107,13 @@ nav a:hover {
     padding-top: 10px;
 }
 
-#home-grid {
+/* ------------------------ Main ------------------------ */
+
+main {
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
+    grid-template-columns: repeat(10, 1fr) ;
 
 }
-
-/* ------------------------ Main ------------------------ */
 
 main section {
     text-align: center;
@@ -154,9 +154,9 @@ h2 {
 }
 
 .card-img {
-    border: 10px solid white;
+    border: 10px solid #4f8cb5;
     width: 100%;
-    transition: transform .5;
+    transition: transform .5s;
     box-shadow: 5px 5px 10px #646a73;
 }
 
@@ -173,7 +173,7 @@ h2 {
 }
 
 .msg {
-    background-color: #4f8cb5;
+    background-color: #646a73;
     line-height: 1.5em;
     padding: 35px;
     grid-column: 6/10;
@@ -196,7 +196,7 @@ h2 {
 /* ------------------------ Footer ------------------------ */
 
 footer {
-    background-color: #4f8cb5;
+    background-color: #646a73;
     /* font-size: 1.2em; */
     color: white;
     padding: 25px 50px;
@@ -224,9 +224,6 @@ footer .social img {
 }
 
 
-
-
-
 /* -------------- Media Query (Must Come Last) -------------- */
 
 @media screen and (max-width: 900px) {
@@ -252,7 +249,8 @@ footer .social img {
     }
     .home-title {
         font-size: 25px;
-        color: #6f7364;
+        /* color: #6f7364; */
+        color: #4f8cb5;
     }
     .rivers-card, .camping-card, .rapids-card { 
         margin: 50px auto;
@@ -270,4 +268,3 @@ footer .social img {
         margin-top: 25px;
     }
 }
-            
