--- a/oreniomakase/styles/site-plan.css
+++ b/oreniomakase/styles/site-plan.css
@@ -1,37 +1,36 @@
-
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
-Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Rock+Salt&display=swap');
+Fonts are separated by a | */
+@import url('https://fonts.googleapis.com/css?family=Bungee&family=Noto+Sans');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #4f8cb5   ;
-   --secondary-color: #fdd20a ;
-  --accent1-color: #646a73;
-  --accent2-color: #FFFFFF;
+  --primary-color: #D41717   ;
+  --secondary-color: #243156 ;
+  --accent1-color: #F5F100;
+  --accent2-color: black;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Rock Salt";
+  --heading-font: Bungee;
   --paragraph-font: "Noto Sans", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #4f8cb5;  /* headlines on a white background */ 
+  --headline-color-on-white: #D41717;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #4f8cb5; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #243156; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #4f8cb5;
-  --nav-link-color: #FFFFFF;
-  --nav-background-color: #646a73;
-  --nav-hover-link-color: #FFFFFF;
-  --nav-hover-background-color: #4f8cb5;
+  --paragraph-background-color: #243156  ;
+  --nav-link-color: #243156;
+  --nav-background-color: white;
+  --nav-hover-link-color: #F5F100;
+  --nav-hover-background-color: #243156;
 }
 
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
 body {
-  max-width: 960px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 4em;
   font-size: 18px;
@@ -40,7 +39,6 @@ body {
 img {
   display: block;
   margin: 0 auto;
-  max-width: 300px;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
@@ -63,6 +61,7 @@ header {
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
 }
+
 p {
   font-family: var(--paragraph-font);
   color: var(--paragraph-color-on-white);
@@ -81,22 +80,28 @@ p {
   width: 25%;
   height: 3em;
 }
+
 .primary {
   background-color: var(--primary-color);
+  color: white;
 }
 .secondary {
   background-color: var(--secondary-color);
+  color: white;
 }
 .accent1 {
   background-color: var(--accent1-color);
 }
 .accent2{
   background-color: var(--accent2-color);
+  color: white;
 }
+
 p.colored {
   background-color: var(--paragraph-background-color);
   color: var(--paragraph-color-on-color);
 }
+
 nav {
   background-color: var(--nav-background-color);
   line-height: 3em;
@@ -106,12 +111,14 @@ nav {
 nav  {
   list-style-type: none;
   display: flex;
+
 }
 nav a {
   padding:1em;
   min-width: 120px;
   text-decoration: none;
   padding: 10px;
+
 }
 nav a:link, nav a:visited {
   color: var(--nav-link-color);
@@ -120,6 +127,7 @@ nav a:hover {
   color: var(--nav-hover-link-color);
   background-color: var(--nav-hover-background-color);
 }
+
 .sitemap {
   display: grid;
   justify-content: center;
@@ -132,7 +140,9 @@ nav a:hover {
     "page2 page2 . . page3 page3";
 }
 .sitemap > div {
+
   text-align: center;
+
 }
 .sm-home {
   grid-area: home;
@@ -149,15 +159,18 @@ nav a:hover {
   background-color: #ccc;
   line-height: 3em;
 }
+
 .top {
   grid-area: top;
   border-left: 1px solid;
 }
+
 .left {
   grid-area: left;
   border-top: 1px solid;
   border-left: 1px solid;
 }
+
 .right {
   grid-area: right;
   border-top: 1px solid;
