--- a/oreniomakase/styles/style.css
+++ b/oreniomakase/styles/style.css
@@ -4,44 +4,51 @@ body {
     background-color: white;
     font-family: "Noto Sans", Tahoma, sans-serif;
     margin: 0;
+
 }
 
 /* ------------------------ Header ------------------------ */
 
-header {
+.site-header {
     background-color: #243156;
     color: white;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr) auto;
+    display: flex;
 } 
 
-header h1 {
+.logo {
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.header-h1 {
     font-family: Bungee, "Brush Script MT", sans-serif;
-    padding: 50px;
+    font-size: 1.8em;
+
 }
 
 nav {
+    background-color: #243156;
+    
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    margin-top: -25px;
 }
 
 nav a {
     text-decoration: none;
     color: white;
     text-align: center;
-    padding: 30px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 25px;
+    padding-top: 25px;
 }
 
 nav a:hover {
     background-color: #D41717;
     color: white;
-}
-
-#logo_link {
-    padding-top: 5px;
-    justify-self: center;
-    align-self: center;
-}
+} 
 
 #hero {
     text-align: center;
@@ -55,7 +62,7 @@ nav a:hover {
 }
 
 #hero-img {
-    width: 1500px;
+    max-width: 1200px;
 }
 
 main {
@@ -132,7 +139,7 @@ footer .social img {
 
 
 /* -------------- Media Query (Must Come Last) -------------- */
-
+/* 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
@@ -156,8 +163,6 @@ footer .social img {
     }
     .home-title {
         font-size: 25px;
-        /* color: #6f7364; */
-        color: #4f8cb5;
     }
     .rivers-card, .camping-card, .rapids-card { 
         margin: 50px auto;
@@ -174,4 +179,4 @@ footer .social img {
     footer {
         margin-top: 25px;
     }
-}
+} */
