--- a/oreniomakase/styles/site-plan.css
+++ b/oreniomakase/styles/site-plan.css
@@ -7,8 +7,8 @@ Fonts are separated by a | */
   /* change the values below to your colors from your palette */
   --primary-color: #D41717   ;
   --secondary-color: #243156 ;
-  --accent1-color: #F5F100;
-  --accent2-color: black;
+  --accent1-color: black;
+  --accent2-color: #F5F100;
 
   /* change the values below to your chosen font(s) */
   --heading-font: Bungee;
@@ -17,13 +17,13 @@ Fonts are separated by a | */
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #D41717;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #243156; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #243156  ;
-  --nav-link-color: #243156;
-  --nav-background-color: white;
-  --nav-hover-link-color: #F5F100;
-  --nav-hover-background-color: #243156;
+  --nav-link-color: white;
+  --nav-background-color: #243156;
+  --nav-hover-link-color: white;
+  --nav-hover-background-color: #D41717;
 }
 
 
