--- a/oreniomakase/styles/style.css
+++ b/oreniomakase/styles/style.css
@@ -45,10 +45,12 @@ nav a {
     padding-top: 25px;
 }
 
-nav a:hover {
+.text-link:hover {
     background-color: #D41717;
     color: white;
 } 
+
+/* ----------------------- Home Main ---------------------- */
 
 #hero {
     text-align: center;
@@ -56,7 +58,6 @@ nav a:hover {
 }
 
 #hero-title {
-
     color: #D41717;
     font-family: Bungee, "Brush Script MT", sans-serif;
 }
@@ -65,7 +66,7 @@ nav a:hover {
     max-width: 1200px;
 }
 
-main {
+.home-grid {
     display: grid;
     grid-template-columns: 2.5fr 2.5fr;
 }
@@ -104,6 +105,55 @@ main {
     margin-left: 100px;
 }
 
+/* ---------------------- Subpage Main --------------------- */
+
+.subpage-main {
+    display: grid;
+    grid-template-rows: 2;
+    text-align: center;
+}
+
+.subpage-main-img {
+    max-width: 1200px;
+    margin-top: 100px;
+}
+
+.subpage-title {
+    color: #D41717;
+    font-family: Bungee, "Brush Script MT", sans-serif;
+}
+
+.subpage-subsection {
+    background-color: #243156;
+    color: white;
+    padding-top: 75px;
+    margin-top: 100px;
+    padding-bottom: 50px;
+}
+
+.subpage-sub-img {
+    max-width: 850px;
+
+}
+
+.sample-products {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 1fr;
+    grid-gap: 30px;
+    margin-top: 100px;
+}
+
+.card-img {
+    max-width: 500px;
+}
+
+.sample-products-msg {
+    grid-column: span 3;
+}
+
+/* -------------------- Starbucks Main --------------------- */
+
 
 
 /* ------------------------ Footer ------------------------ */
@@ -122,14 +172,10 @@ footer {
 footer a {
     color: white;
     text-decoration: none;
-}
-
-footer a:hover {
-    color: #D41717;
-}
-
-footer p a:hover {
-    text-decoration: underline;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 25px;
+    padding-top: 25px;
 }
 
 footer .social img {
